--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: |
             . venv/bin/activate
             cd pygoat
-            python3 makemigrations
+            python3 manage.py makemigrations
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
